[project]
name = "pythonmain"
version = "0.1.0"
description = ""
authors = [
    {name = "MAX",email = "ilya.hanin463@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-q"
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
